manifest/argocd-applications/traefik-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: "Host(`traefik-dashboard.osii.nneir-dev.pub.azure.novonordisk.com`)"
    services:
    - kind: TraefikService
      name: api@internal
    middlewares:
    - name: append-dashboard
      namespace: traefik
#  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: append-dashboard
  namespace: traefik
spec:
  redirectRegex:
    regex: "^https:\\/\\/([^\\/]+)\\/?$"
    replacement: "https://$1/dashboard/"
